<?xml version="1.0"?>
<package format="2">
    <name>hospitality</name>
    <version>0.0.0</version>
    <description>The hospitality package</description>

    <maintainer email="sspark010@gmail.com">Susung Park</maintainer>
    <license>TODO</license>

    <!-- Build dependencies -->
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>message_generation</build_depend>

    <!-- Runtime dependencies -->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <!-- Build tool dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
