<?xml version="1.0"?>
<package format="2">
  <name>hospitality_gazebo</name>
  <version>0.0.0</version>
  <description>Hospitality Package - Gazebo Simulation</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sspark010@gmail.com">Susung Park</maintainer>
  <author email="sspark010@gmail.com">Susung Park</author>
  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" gazebo_media_path="${prefix}" />
  </export>
</package>
